# flutter_pkcs12

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/assets/: keystore.p12
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_pkcs12.podspec
ios/Classes/: FlutterPkcs12Plugin.h  FlutterPkcs12Plugin.m  SwiftFlutterPkcs12Plugin.swift
lib/: flutter_pkcs12.dart
linux/: CMakeLists.txt  flutter_pkcs12_plugin.cc
linux/include/flutter_pkcs12/: flutter_pkcs12_plugin.h
macos/: flutter_pkcs12.podspec
macos/Classes/: FlutterPkcs12Plugin.swift
test/: flutter_pkcs12_test.dart
windows/: CMakeLists.txt  flutter_pkcs12_plugin.cpp
windows/include/flutter_pkcs12/: flutter_pkcs12_plugin.h
(+3 files in other folders)
